--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "tailwindcss": "^3.2.4",
     "three": "^0.149.0",
     "typescript": "^4.9.4",
+    "vercel": "^28.15.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "vercel --prod"
   },
   "eslintConfig": {
     "extends": [
